[gd_scene format=3 uid="uid://bg6ed61lknyth"]

[ext_resource type="Script" uid="uid://cyxcunk7lr1u0" path="res://Scripts/battle_ui.gd" id="1_ij1wg"]
[ext_resource type="PackedScene" uid="uid://d1xo0ioc7017e" path="res://Scenes/UI/special_button.tscn" id="2_w7saw"]
[ext_resource type="PackedScene" uid="uid://bphm2w3qsdq7a" path="res://Scenes/status.tscn" id="3_xs5rh"]

[node name="BattleUI" type="Control" unique_id=1347659441]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ij1wg")

[node name="PlayerInfo" type="VBoxContainer" parent="." unique_id=14319706]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = -197.0
offset_right = 294.0
offset_bottom = -42.0
grow_vertical = 0
metadata/_edit_group_ = true

[node name="AP" type="Label" parent="PlayerInfo" unique_id=1866597355]
layout_mode = 2
size_flags_vertical = 6
text = "AP:"

[node name="Health" type="HBoxContainer" parent="PlayerInfo" unique_id=550865808]
layout_mode = 2
size_flags_vertical = 3

[node name="HP" type="Label" parent="PlayerInfo/Health" unique_id=932054250]
layout_mode = 2
text = "HP:"

[node name="PlayerBar" type="ProgressBar" parent="PlayerInfo/Health" unique_id=1410393672]
layout_mode = 2
size_flags_horizontal = 3
value = 100.0

[node name="ADR" type="ProgressBar" parent="PlayerInfo" unique_id=2010923335]
layout_mode = 2
size_flags_vertical = 2
size_flags_stretch_ratio = 2.0

[node name="Esoterica" type="HBoxContainer" parent="PlayerInfo" unique_id=1748773607]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.09

[node name="SpecialButton3" parent="PlayerInfo/Esoterica" unique_id=755307066 instance=ExtResource("2_w7saw")]
layout_mode = 2

[node name="SpecialButton2" parent="PlayerInfo/Esoterica" unique_id=1813362755 instance=ExtResource("2_w7saw")]
layout_mode = 2

[node name="SpecialButton" parent="PlayerInfo/Esoterica" unique_id=618400135 instance=ExtResource("2_w7saw")]
layout_mode = 2

[node name="SpecialButton4" parent="PlayerInfo/Esoterica" unique_id=640098075 instance=ExtResource("2_w7saw")]
layout_mode = 2

[node name="SpecialButton5" parent="PlayerInfo/Esoterica" unique_id=106109184 instance=ExtResource("2_w7saw")]
layout_mode = 2

[node name="SpecialButton6" parent="PlayerInfo/Esoterica" unique_id=1957297881 instance=ExtResource("2_w7saw")]
layout_mode = 2

[node name="FunctionalButtons" type="HBoxContainer" parent="PlayerInfo" unique_id=1809582399]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 5

[node name="Attack" type="Button" parent="PlayerInfo/FunctionalButtons" unique_id=996881734]
layout_mode = 2
size_flags_horizontal = 3
text = "Attack"

[node name="Turn" type="Button" parent="PlayerInfo/FunctionalButtons" unique_id=2050268359]
layout_mode = 2
size_flags_horizontal = 3
text = "Next Turn"

[node name="EnemyInfo" type="HBoxContainer" parent="." unique_id=736185309]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -404.0
offset_top = 28.0
offset_right = -27.0
offset_bottom = 55.0
grow_horizontal = 0
metadata/_edit_group_ = true

[node name="EnemyName" type="Label" parent="EnemyInfo" unique_id=52491663]
layout_mode = 2
text = "Enemy name"
horizontal_alignment = 2

[node name="EnemyBar" type="ProgressBar" parent="EnemyInfo" unique_id=1804124889]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerStatuses" type="HBoxContainer" parent="." unique_id=185924381]
layout_mode = 0
offset_left = 329.0
offset_top = 560.0
offset_right = 1132.0
offset_bottom = 600.0

[node name="Status" parent="PlayerStatuses" unique_id=229806799 instance=ExtResource("3_xs5rh")]
layout_mode = 2
size_flags_horizontal = 2

[node name="EnemyStatuses" type="HBoxContainer" parent="." unique_id=1055753545]
layout_mode = 0
offset_left = 61.0
offset_top = 25.0
offset_right = 731.0
offset_bottom = 65.0

[node name="Status" parent="EnemyStatuses" unique_id=1260644551 instance=ExtResource("3_xs5rh")]
layout_mode = 2

[connection signal="pressed" from="PlayerInfo/FunctionalButtons/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="PlayerInfo/FunctionalButtons/Turn" to="." method="_on_turn_pressed"]
